--- a/index.html
+++ b/index.html
@@ -3,19 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تعلم اللغات - نظام احترافي</title>
+    <title>تعلم اللغات</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        /* سيتم استبدال هذا بـ style.css */
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'Segoe UI', system-ui; background: #f5f7fa; }
-    </style>
 </head>
 <body>
     <div id="app">
-        <!-- سيتم تعبئته بالجافاسكريبت -->
+        <!-- سيتغير بالجافاسكريبت -->
     </div>
-
+    
     <script src="app.js"></script>
 </body>
 </html>
