--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="currency-row">
                     <div class="currency-display">
                         <div class="currency-flag" id="fromCurrencyImage">
-                            <img src="https://raw.githubusercontent.com/jamalkatabeuro-sketch/My-website/main/101-currency-usd.png" alt="USD" id="fromFlagImg">
+                            <img src="https://raw.githubusercontent.com/kettabcrypto-cmd/my-language-app/main/assets/101-currency-usd.png" alt="USD" id="fromFlagImg">
                         </div>
                         <div class="currency-symbol" id="fromCurrencyCode">USD</div>
                     </div>
@@ -85,7 +85,7 @@
                 <div class="currency-row">
                     <div class="currency-display">
                         <div class="currency-flag" id="toCurrencyImage">
-                            <img src="https://raw.githubusercontent.com/jamalkatabeuro-sketch/My-website/main/100-currency-eur.png" alt="EUR" id="toFlagImg">
+                            <img src="https://raw.githubusercontent.com/kettabcrypto-cmd/my-language-app/main/assets/100-currency-eur.png" alt="EUR" id="toFlagImg">
                         </div>
                         <div class="currency-symbol" id="toCurrencyCode">EUR</div>
                     </div>
@@ -198,12 +198,10 @@
         </a>
     </div>
 
-    <!-- استيراد الملفات بالترتيب الصحيح -->
+    <!-- ⭐⭐⭐ الترتيب الصحيح ⭐⭐⭐ -->
     <script src="config.js"></script>
-    <script src="utils.js"></script>
-    <script src="storage.js"></script>
     <script src="api.js"></script>
-    <script src="ui-manager.js"></script>
     <script src="app.js"></script>
+    <!-- ⭐⭐⭐ لا حاجة لـ utils.js, storage.js, ui-manager.js ⭐⭐⭐ -->
 </body>
 </html>
